# search-vdjdb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
search_vdjdb/: main.py  query_db.py
src/python/search_vdjdb/: _config.py  _query.py  _runner.py  di_container.py  entry.py
src/python/search_vdjdb/configs/: args.toml  query_examples.toml
src/python/search_vdjdb/tiledb/: client.py  executor.py  registrations.py
