[tool.poetry]
name = "search-vdjdb"
version = "1.0.0"
description = "Query VDJdb based on a custom set of input params."
authors = ["Spencer Seale <spencerseale17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
pandas = "1.1.5"
numexpr = "2.7.1"
requests = "2.22.0"
toml = "^0.10.2"
importlib-resources = "^5.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
